[package]
name = "web_server"
description = "A web server implementation used to learn Rust."
license = "MIT"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["webserver"]
categories = ["web-programming::http-server"]
repository = "https://github.com/calebfletcher/LearningRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
